# DownloadAndAnalysisFile

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/dependencies/: services.py
app/api/routers/: calculations.py  downloaded_files.py  downloads.py  pages.py  router.py
app/api/schemas/: calculations.py  download.py  downloaded_file.py
app/clients/: exceptions.py  schemas.py  source_api_client.py
app/core/: config.py  factories.py
app/db/: session.py
app/db/models/: __init__.py  download_job.py  downloaded_file.py
app/repositories/: download_job_repository.py  downloaded_file_repository.py
app/services/: calculation_service.py  download_service.py  downloaded_file_service.py  file_storage_service.py
app/static/css/: styles.css
app/static/js/: downloaded_files.js  downloads.js
app/tasks/: celery_app.py  download_tasks.py
app/templates/: base.html  downloaded_files.html  downloads.html
migrations/: env.py
migrations/versions/: 3b180daa9820_remove_downloaded_file_statistics.py  4b8393d3850d_create_downloaded_files_table.py  f900696c536c_create_download_jobs_table.py
